k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: waka
  namespace: waka
  labels:
    app: waka
spec:
  selector:
    app: waka
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
